<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.zhangfan.udaquizapp.MainActivity">


        <TextView
            android:id="@+id/quiz_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/quiz_one"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/quiz_one_answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/quiz_one_answer_one"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_one" />

        <CheckBox
            android:id="@+id/quiz_one_answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/quiz_one_answer_two"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_one_answer_one"
            app:layout_constraintLeft_toRightOf="@+id/quiz_one_answer_one"
            app:layout_constraintTop_toTopOf="@+id/quiz_one_answer_one" />

        <CheckBox
            android:id="@+id/quiz_one_answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginStart="12dp"
            android:text="@string/quiz_one_answer_three"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_one_answer_two"
            app:layout_constraintLeft_toRightOf="@+id/quiz_one_answer_two"
            app:layout_constraintTop_toTopOf="@+id/quiz_one_answer_two" />

        <TextView
            android:id="@+id/quiz_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/quiz_two"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_one"
            app:layout_constraintTop_toBottomOf="@+id/quiz_one_answer_one" />


        <RadioGroup
            android:id="@+id/quiz_two_group"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_two"
            app:layout_constraintTop_toBottomOf="@+id/quiz_two">


            <RadioButton
                android:id="@+id/quiz_two_answer_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/quiz_two_answer_one" />

            <RadioButton
                android:id="@+id/quiz_two_answer_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/quiz_two_answer_two" />
        </RadioGroup>

        <TextView
            android:id="@+id/quiz_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quiz_three"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_two_group"
            app:layout_constraintTop_toBottomOf="@+id/quiz_two_group" />

        <EditText
            android:id="@+id/quiz_three_answer"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_three"
            app:layout_constraintTop_toBottomOf="@+id/quiz_three" />

        <TextView
            android:id="@+id/quiz_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quiz_four"
            android:textSize="16dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_three"
            app:layout_constraintTop_toBottomOf="@+id/quiz_three_answer" />

        <CheckBox
            android:id="@+id/quiz_four_answer_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/quiz_four_answer_one"
            app:layout_constraintLeft_toLeftOf="@+id/quiz_four"
            app:layout_constraintTop_toBottomOf="@+id/quiz_four" />

        <CheckBox
            android:id="@+id/quiz_four_answer_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/quiz_four_answer_two"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_four_answer_one"
            app:layout_constraintLeft_toRightOf="@+id/quiz_four_answer_one"
            app:layout_constraintTop_toTopOf="@+id/quiz_four_answer_one" />

        <CheckBox
            android:id="@+id/quiz_four_answer_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/quiz_four_answer_three"
            app:layout_constraintBottom_toBottomOf="@+id/quiz_four_answer_two"
            app:layout_constraintLeft_toRightOf="@+id/quiz_four_answer_two"
            app:layout_constraintTop_toTopOf="@+id/quiz_four_answer_two" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:onClick="submitQuiz"
            android:text="提交"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quiz_four_answer_two" />


    </android.support.constraint.ConstraintLayout>

</ScrollView>
